--- a/templates/search.html
+++ b/templates/search.html
@@ -27,29 +27,30 @@
     <div class="col-md-2"></div>
 </form>
 
-{% for source in sources %}
- <p>{{ source.source_name }}</p>
-{% endfor %}
 <table class="table table-hover">
     <thead>
       <tr>
         <th scope="col">#</th>
-        <th scope="col">Library Name</th>
-        <th scope="col">Bu Ay Ödünç Alınan</th>
-        <th scope="col">Toplam Mevcut</th>
-           <th scope="col">En Çok Kullanılan Kategori</th>
-          <th scope="col">Ücret</th>
+        <th scope="col">Kaynak Adı</th>
+        <th scope="col">Yazar</th>
+        <th scope="col">Tür</th>
+        <th scope="col">Barkod No</th>
+        <th scope="col">Mevcut</th>
       </tr>
     </thead>
     <tbody>
-    {% for row in kutups  %}
+    {% for source in sources  %}
       <tr>
-        <th scope="row">{{ forloop.counter }}</th>
-        <td>{{ row.kutuphane.library_name }}</td>
-        <td>{{ row.tum_kitaplar }}</td>
-        <td>{{ row.emanetler }}</td>
-        <td>{{ row.max_category.types }}</td>
-      <td>{{ row.price }}</td>
+        <th scope="source">{{ forloop.counter }}</th>
+        <td>{{ source.source_name }}</td>
+        <td>{{ source.author }}</td>
+        <td>{{ source.source_type }}</td>
+        <td>{{ source.barcode }}</td>
+        {% if source.lend == 'True' %}
+          <td>{{ 'Hayır' }}</td>
+        {% else %}
+          <td>{{ 'Evet' }}</td>
+        {% endif %}
       </tr>
   {% endfor %}
   
