--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -41,7 +41,7 @@
         {% if request.user.is_authenticated %}
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ">
         <li class="nav-item">
-          <a class="nav-link"  style="cursor: pointer">Talepler</a>
+          <a class="nav-link" href="{% url 'talepler' %}"  style="cursor: pointer">Talepler</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Raporlar</a>
