--- a/templates/search.html
+++ b/templates/search.html
@@ -27,7 +27,12 @@
     <div class="col-md-2"></div>
 </form>
 
-<table class="table table-hover">
+
+  {% if sources.count == 0 %}
+  <button class="btn btn-primary" data-toggle="modal" data-target="#talepetmodal">Talep Et</button>
+
+  {% else %}
+  <table class="table table-hover">
     <thead>
       <tr>
         <th scope="col">#</th>
@@ -39,7 +44,6 @@
       </tr>
     </thead>
     <tbody>
-    
     {% for source in sources  %}
       <tr>
         <th scope="source">{{ forloop.counter }}</th>
@@ -56,11 +60,7 @@
   {% endfor %}
     </tbody>
   </table>
-  
-  {% if sources.count == 0 %}
-  <button class="btn btn-primary" data-toggle="modal" data-target="#talepetmodal">Talep Et</button>
  {% endif %}
-
 </div>
 
 
