--- a/templates/talep_hafta.html
+++ b/templates/talep_hafta.html
@@ -18,7 +18,12 @@
         <td>{{ request.request_date }}</td>
 
         {% if is_available %}
-        <td><a role="button" class="btn btn-primary btn-sm" href="{% url 'TalepEt' request.id %}">Talep Et</a></td>
+        <td>
+          <div class="col-xs-1">
+            <a role="button" class="btn btn-primary btn-sm" href="{% url 'TalepEt' request.id %}" style="color:white; height:40px; font-size:1px;">Talep Et</a>
+          </div>
+          
+        </td>
 
         {% else %}
         <td>Talep sınırı aşıldı</td>
